api/deploy/manifests/prod/manupulse_pulstats.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: pulstats
  name: manupulse
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pulstats
  name: pulstats
  namespace: manupulse
spec:
  ports:
  - port: 8000
  selector:
    app: pulstats
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    linkerd.io/inject: enabled
  labels:
    app: pulstats
  name: pulstats
  namespace: manupulse
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pulstats
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: pulstats
        namespace: manupulse
    spec:
      containers:
      - env:
        - name: APP_ENVIRONMENT
          value: prod
        image: registry4manupulse.azurecr.io/pulstats:v0.1.60
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 10
        name: pulstats
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "2"
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 16Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    zipkin-collector-host: collector.linkerd-jaeger
  labels:
    app: pulstats
  name: pulstats-healthcheck
  namespace: manupulse
spec:
  rules:
  - host: manupulse.southeastasia.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: pulstats
            port:
              number: 8000
        path: /healthz
        pathType: Exact
  tls:
  - hosts:
    - manupulse.southeastasia.cloudapp.azure.com
    secretName: manupulse-southeastasia-cloudapp-azure-com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-manu
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    zipkin-collector-host: collector.linkerd-jaeger
  labels:
    app: pulstats
  name: pulstats-manu
  namespace: manupulse
spec:
  rules:
  - host: manupulse.southeastasia.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: pulstats
            port:
              number: 8000
        path: /pulstats/stats
        pathType: Exact
      - backend:
          service:
            name: pulstats
            port:
              number: 8000
        path: /pulstats/health_data
        pathType: Exact
      - backend:
          service:
            name: pulstats
            port:
              number: 8000
        path: /manu/user_session
        pathType: Exact
  tls:
  - hosts:
    - manupulse.southeastasia.cloudapp.azure.com
    secretName: manupulse-southeastasia-cloudapp-azure-com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-pulse
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    zipkin-collector-host: collector.linkerd-jaeger
  labels:
    app: pulstats
  name: pulstats-pulse
  namespace: manupulse
spec:
  rules:
  - host: manupulse.southeastasia.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: pulstats
            port:
              number: 8000
        path: /pulse/user_session
        pathType: Exact
  tls:
  - hosts:
    - manupulse.southeastasia.cloudapp.azure.com
    secretName: manupulse-southeastasia-cloudapp-azure-com
